@@ -6,6 +6,9 @@ This application can process and analyze Image thats contains grain
 ## Installation
 run the source code with Eclipse, .Jar will come 
 
+run as configuration with 
+--module-path  "javafx-sdk-17.0.1\lib" --add-modules javafx.controls,javafx.fxml
+
 ## Authors and acknowledgment
 Thanks to Alex,Hreshvik,Quentin and joey for bring their contribution to our project
 
